22006-02-15  Michael Stucki  <michael@typo3.org>

	* Various changes to indexed_search, see local ChangeLog for details
	* Install Tool: Added "cache_imagesizes" to list of tables that can be cleared
	* !!! Indexed Search: Removed all options for indexing OpenOffice.org/OpenDocument files and replaced them with the above "unzip" option. Affected options are: nativeOOMethod, OOoExtract, ruby
	* !!! Indexed Search: Changed all default paths from /usr/local/bin/ to /usr/bin/

006-02-15  Rene Fritz  <r.fritz@colorcube.de>

	* Added hook to element browser to make it possible to render own EB's. All EB classes are moved into an own file.
	* Added the possiblity to set TCEForm items to read-only.

2006-02-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Changes to the htmlArea RTE extension (see details in local ChangeLog)

2006-02-14  Rene Fritz  <r.fritz@colorcube.de>

	* Moved t3lib/gfx/ to typo3/gfx/
	* Changed all references of t3lib/gfx/ to gfx/ or typo3/gfx/
	* Made some FE references to media/...
	* Added index.php, showpic.php and thumbs.php scripts
	* All thoese changes were made to make it possible to use the TYPO3 source without symlinks

2006-02-14  Kasper Skaarhoj

	* Fixed part II of the versioning swapping change: Now versioning is completely independent of MySQL versions and it is fully DBAL compliant: Records are swapping content rather than ids (locking file support integrated which stores swapped records in case something goes wrong - however, no tool for reverting using this lock file...)