@@ -1,4 +1,7 @@
-22006-02-15  Michael Stucki  <michael@typo3.org>
+2006-02-15  Kasper Skaarhoj
+	* Changed usage of showpic.php: Now, the reference to showpic.php from inside tslib_content is done using "index.php?eID=tx_cms_showpic&..."+usual parameters. This is the future supported way of accessing the services of showpic! It also means that other scripts offering FE services bypassing tslib_fe can use same methodology! Applications I can think of: AJAX data, streams (like secure download scripts passing binary data through). This change means that "showpic.php" is not needed as a symlink anymore, neither as a script in the core root!
+
+2006-02-15  Michael Stucki  <michael@typo3.org>
 
 	* Various changes to indexed_search, see local ChangeLog for details
 	* Install Tool: Added "cache_imagesizes" to list of tables that can be cleared
